--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,14 @@ a:visited {
   height: 400px;
 }
 
+
+#Margarita-Khodzka-cover {
+    background-image: url("http://i.imgur.com/6TqZ7zH.jpg");
+}
+#Margarita-Khodzka-card {
+    background-image: url("http://i.imgur.com/MuSQndE.jpg");
+}
+
 #krystle-barnes-cover {
     background-image: url("http://i.imgur.com/DdV0Ekg.jpg");
 }
