--- a/css/styles.css
+++ b/css/styles.css
@@ -135,10 +135,10 @@ a:visited {
 }
 
 
-#Margarita-Khodzka-cover {
+#margarita-khodzka-cover {
     background-image: url("http://i.imgur.com/6TqZ7zH.jpg");
 }
-#Margarita-Khodzka-card {
+#margarita-khodzka-card {
     background-image: url("http://i.imgur.com/MuSQndE.jpg");
 }
 
